apps/bff/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizup-bff
  namespace: quizup-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.quizup.cnadjim.fr
      secretName: api-quizup-cnadjim-fr-tls
  rules:
    - host: api.quizup.cnadjim.fr
      http:
        paths:
          # Façade REST `/api/**` **et** endpoint STOMP `/ws/**` (Traefik proxifie le WebSocket).
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quizup-bff
                port:
                  number: 80
